<resources>
    <string name="app_name">Go Fishing</string>
    <string name="catch_view">Catch List</string>

    <string name="data_details">Catch Details</string>
    <string name="catch_picture">Picture</string>
    <string name="catch_basic">Catch</string>
    <string name="catch_details">Details</string>
    <string name="catch_tackle">Tackle</string>
    <string name="catch_map">Catch Map</string>
    <string name="tab_text_4">Weather</string>
    <string name="catch_location">Location</string>
    <string name="title_activity_start_activity">start_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Go Fishing</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="current_location">Current Location</string>
    <string name="current_latitude">Current Latitude</string>
    <string name="current_longtitude">Current Longtitude</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_identify">Current Location</string>

    <string name="home_second">Home Second</string>
    <string name="species">Species</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="comment">Comment</string>
    <string name="lure_bait">Lure / Bait</string>
    <string name="structure">Structure</string>
    <string name="water_conditions">Water Conditions</string>
    <string name="fish_depth">Fish depth</string>
    <string name="hook_size">Hook Size</string>
    <string name="ground_bait">Ground bait</string>
    <string name="boat_speed">Boat speed</string>
    <string name="rod">Rod</string>
    <string name="reel">Reel</string>
    <string name="tides">Tides</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="add_catch">Add Catch</string>
    <string name="line">Line</string>
    <string name="enter_species">Please enter a species</string>
    <string name="catch_image">Catch Image</string>
    <string name="fish_count">Fish Count</string>

</resources>
