<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_view">

    <fragment
        android:id="@+id/nav_view"
        android:name="com.ryalls.team.gofishing.ui.catch_view.CatchView"
        android:label="@string/catch_view"
        tools:layout="@layout/catch_fish_list" >
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="com.ryalls.team.gofishing.ui.catch_entry.CatchEntryFragment"
        android:label="@string/data_details"
        tools:layout="@layout/edit_tabbed_fragment" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.ryalls.team.gofishing.ui.catch_map.CatchMap"
        android:label="@string/catch_map"
        tools:layout="@layout/catch_map" />

    <fragment
        android:id="@+id/nav_identify"
        android:name="com.ryalls.team.gofishing.ui.identify_fish.Identify"
        android:label="@string/menu_identify"
        tools:layout="@layout/catch_identify" />
</navigation>