<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catch_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".ui.catch_entry.CatchDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lure_bait"
            android:inputType="textMultiLine|textNoSuggestions"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lureField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/structure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/structure"
            android:inputType="textMultiLine|textNoSuggestions"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/structureField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/water_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/water_conditions"
            android:inputType="textMultiLine|textNoSuggestions"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/water_conditionsField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fish_depth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fish_depth"
            android:inputType="textNoSuggestions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fish_depthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hook_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hook_size"
            android:inputType="textNoSuggestions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hook_sizeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ground_bait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ground_bait"
            android:inputType="textNoSuggestions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ground_baitField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boat_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/boat_speed"
            android:inputType="textNoSuggestions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/boat_speedField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tides"
            android:inputType="textNoSuggestions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tidesField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>
